--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         <div class="container">
-            <img src="https://4.bp.blogspot.com/-tjvVknCxD_s/WfacIlc6SPI/AAAAAAAAEWA/tRXpVDbOqPYPa4iWQhlBk6OR-Kbu4XsawCLcBGAs/s1600/bin.png" class="logo">
-            <link rel="shortcut icon" href="https://i.pinimg.com/originals/07/45/26/0745267f048606cf5be2cb77c1c0305f.png">
+            <img src="https://i.ibb.co/1dgfy33/kreatif-siber.png" class="logo">
+            <link rel="shortcut icon" href="https://i.ibb.co/1dgfy33/kreatif-siber.png">
             <div class="content">
                 <p>Server ini dalam perbaikan dan akan diatur tidak bersifat untuk public melainkan private.</p>
                 <h1>We're <span>Launching</span> Soon</h1>
