--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cryptiva- Cyber Security</title>
+    <title>Robotic - Cyber Security</title>
     <link rel="shortcut icon" href="./img/Service-img/S1.png" type="image/x-icon">
     <!-- font awesome link  -->
     <link rel="stylesheet" href="./css/all.min.css">
