--- a/signup.html
+++ b/signup.html
@@ -19,101 +19,79 @@
     <link rel="stylesheet" href="./css/responsive.css">
 </head>
 <body>
-    <!-- Header section Start  -->
-    <header class="Header_section">
-        <nav class="navbar navbar-expand-md fixed-top">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">
-                    <img src="./img/Logo/logo.png" alt="logo">
-                </a>
-                <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#Menu_bar" 
-                    aria-expanded="false">
-                    <i class="fas fa-bars text-white"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="Menu_bar">
-                    <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Services <i class="fas fa-angle-down ml-1"></i></a>
-                            <ul>
-                                <li><a href="service.html">Web design</a></li>
-                                <li><a href="service.html">Graphics Design</a></li>
-                                <li><a href="service.html">Ethical Hacking</a></li>
-                                <li><a href="service.html">Cyber Security</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Blog <i class="fas fa-angle-down ml-1"></i></a>
-                            <ul>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="blog.html">Single Blog</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="signup.html">Contact</a>
-                        </li>
-                    </ul>
-                    <div class="Button">
-                        <a href="#" class="btn common_button">Contact Us</a>
+      <!-- blog section start here  -->
+      <section class="Blog_section my-5 py-5 text-white">
+        <div class="Service_section_title text-center text-white">
+            <h6>Contact</h6>
+        </div>
+        <div class="container">
+            <div class="owl-carousel">
+                <div class="Blog_Card">
+                    <div class="blog_img">
+                        <img src="./img/Blog_img/blog-1.jpg" class="img-fluid" alt="">
+                    </div>
+                    <div class="blog_description">
+                        <small>Latest News</small>
+                        <h1>Five Strategies to Optimize Cloud Security in 2021</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error maxime cumque aut optio vitae ipsa ducimus quo eligendi praesentium in.</p>
+                    </div>
+                    <div class="read_more_button">
+                        <a href="#" class="btn common_button">READ MORE <i class="fas fa-arrow-right ml-2"></i></a>
                     </div>
                 </div>
-            </div>
-        </nav>
-    </header>
-    
-    <div class="problem-fix"></div>
-    <section class="page_title text-center">
-        <h1 class="display-6">Contact Us</h1>
-    </section>
-
-    <!-- line animation section Start -->
-    <section class="animate_line_sectine mb-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="animate_line">
-                        <div class="animated_ball"></div>
-                        <div class="animated_ball"></div>
+                <div class="Blog_Card">
+                    <div class="blog_img">
+                        <img src="./img/Blog_img/blog-2.jpg" class="img-fluid" alt="">
+                    </div>
+                    <div class="blog_description">
+                        <small>Criminals</small>
+                        <h1>Cyber Criminals Publish Stolen Sepa Data</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error maxime cumque aut optio vitae ipsa ducimus quo eligendi praesentium in.</p>
+                    </div>
+                    <div class="read_more_button">
+                        <a href="#" class="btn common_button">READ MORE <i class="fas fa-arrow-right ml-2"></i></a>
+                    </div>
+                </div>
+                <div class="Blog_Card">
+                    <div class="blog_img">
+                        <img src="./img/Blog_img/blog-3.jpg" class="img-fluid" alt="">
+                    </div>
+                    <div class="blog_description">
+                        <small>Security</small>
+                        <h1>The Security Risks Of Changing Package Owners</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error maxime cumque aut optio vitae ipsa ducimus quo eligendi praesentium in.</p>
+                    </div>
+                    <div class="read_more_button">
+                        <a href="#" class="btn common_button">READ MORE <i class="fas fa-arrow-right ml-2"></i></a>
+                    </div>
+                </div>
+                <div class="Blog_Card">
+                    <div class="blog_img">
+                        <img src="./img/Blog_img/blog-4.jpg" class="img-fluid" alt="">
+                    </div>
+                    <div class="blog_description">
+                        <small>Data Privecy</small>
+                        <h1>The Security Risks Of Changing Package Owners</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error maxime cumque aut optio vitae ipsa ducimus quo eligendi praesentium in.</p>
+                    </div>
+                    <div class="read_more_button">
+                        <a href="#" class="btn common_button">READ MORE <i class="fas fa-arrow-right ml-2"></i></a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- line animation section end -->
-
-    <!-- Sign Up section  Start-->
-    <section class="Sign_up_section text-center text-white my-5 py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 py-5">
-                    <div class="sign_up w-75 mx-auto">
-                        <h1>Subscribe Our Newsletter</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    </div>
-                    <div class="input_section">
-                        <input type="email"  placeholder="Enter e-mail address">
-                        <a href="#" class="btn">Subscribe</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Sign Up section End -->
+    <!-- blog section end here  -->
     <footer class="text-white">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="col-lg-6 col-md-12 col-sm-12 wow bounceInLeft">
                     <div class="service_section_title">
                         <h6>Contact Us</h6>
                         <h3>Get In Touch</h3>
                     </div>
                     <div class="small_des">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud xercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+                        <p>Robotic Cyber adalah sebuah perusahaan teknologi informasi yang berlokasi di Jakarta dan Surabaya                        </p>
                     </div>
                     <div class="Address_section d-flex justify-content-between">
                         <div class="home d-flex justify-content-between">
@@ -121,8 +99,8 @@
                                 <i class="fas fa-home"></i>
                             </div>
                             <div class="address">
-                                <h6>Ubud</h6>
-                                <p>Jl. Raya Ubud No.88,<br/> Bali - 80571</p>
+                                <h6>Jakarta Office</h6>
+                                <p>Jl. Sultan Iskandar Muda, Kebayoran Lama<br/> Jakarta Selatan - 12240</p>
                             </div>
                         </div>
                         <div class="home d-flex justify-content-between">
@@ -130,8 +108,8 @@
                                 <i class="fas fa-home"></i>
                             </div>
                             <div class="address">
-                                <h6>Denpasar</h6>
-                                <p>Jl. Raya Ubud No.88,<br/> Bali - 80571</p>
+                                <h6>Surabaya Office</h6>
+                                <p>Jl. Ploso Timur IV<br/> Jawa Timur - 60133</p>
                             </div>
                         </div>
                     </div>
@@ -142,7 +120,7 @@
                             </div>
                             <div class="address ml-4">
                                 <h6>Call Us</h6>
-                                <p>(+62)81 234 998 112</p>
+                                <p>(+62)888 802 2526</p>
                             </div>
                         </div>
                         <div class="home d-flex justify-content-between">
@@ -151,12 +129,12 @@
                             </div>
                             <div class="address">
                                 <h6>Email Address</h6>
-                                <p>mh514928@gmail.com</p>
+                                <p>security@labsbots.com</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="col-lg-6 col-md-12 col-sm-12 wow bounceInRight">
                     <form>
                         <div class="form-group">
                           <input type="text" class="form-control" placeholder="Your Name">
