--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                     <div class="blog_description">
                         <small>Latest News</small>
                         <h1>Five Strategies to Optimize Cloud Security in 2021</h1>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error maxime cumque aut optio vitae ipsa ducimus quo eligendi praesentium in.</p>
+                        <p>Maintance.</p>
                     </div>
                     <div class="read_more_button">
                         <a href="#" class="btn common_button">READ MORE <i class="fas fa-arrow-right ml-2"></i></a>
@@ -510,7 +510,7 @@
                     <div class="blog_description">
                         <small>Criminals</small>
                         <h1>Cyber Criminals Publish Stolen Sepa Data</h1>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error maxime cumque aut optio vitae ipsa ducimus quo eligendi praesentium in.</p>
+                        <p>Maintance.</p>
                     </div>
                     <div class="read_more_button">
                         <a href="#" class="btn common_button">READ MORE <i class="fas fa-arrow-right ml-2"></i></a>
@@ -523,7 +523,7 @@
                     <div class="blog_description">
                         <small>Security</small>
                         <h1>The Security Risks Of Changing Package Owners</h1>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error maxime cumque aut optio vitae ipsa ducimus quo eligendi praesentium in.</p>
+                        <p>Maintance.</p>
                     </div>
                     <div class="read_more_button">
                         <a href="#" class="btn common_button">READ MORE <i class="fas fa-arrow-right ml-2"></i></a>
@@ -536,7 +536,7 @@
                     <div class="blog_description">
                         <small>Data Privecy</small>
                         <h1>The Security Risks Of Changing Package Owners</h1>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error maxime cumque aut optio vitae ipsa ducimus quo eligendi praesentium in.</p>
+                        <p>Maintance.</p>
                     </div>
                     <div class="read_more_button">
                         <a href="#" class="btn common_button">READ MORE <i class="fas fa-arrow-right ml-2"></i></a>
